# website-crawler

./: .gitignore  CLAUDE.md  LICENSE  README.md  TASKS.md  TODO.md  crawler.py  pyproject.toml  website_crawler.py
devlog/: 2025-12-12-analyzing-refactoring-codebase.txt
src/: __init__.py  crawler.py  website_crawler.py
tests/: conftest.py  test_crawler.py  test_website_crawler.py
