[tool.poetry]
name = "website-crawler"
version = "0.1.0"
description = "A Python-based website crawler that generates CSV reports"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "crawler.py"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
urllib3 = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
